--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "restful",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,7 @@
   "homepage": "https://github.com/Henrique-Franca/Clear-NodeJS#readme",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
